--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/dlsemwal/vidly-project#readme",
   "dependencies": {
+    "config": "^3.2.2",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
-    "joi": "^14.3.1"
+    "joi": "^14.3.1",
+    "morgan": "^1.9.1"
   }
 }
