--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "joi": "^14.3.1",
+    "mongoose": "^5.7.3",
     "morgan": "^1.9.1"
   }
 }
