--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "config": "^3.2.2",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "fawn": "^2.1.5",
     "joi": "^14.3.1",
     "mongoose": "^5.7.3",
     "morgan": "^1.9.1"
