--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   },
   "homepage": "https://github.com/dlsemwal/vidly-project#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "config": "^3.2.2",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "fawn": "^2.1.5",
     "joi": "^14.3.1",
+    "joi-objectid": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.7.3",
     "morgan": "^1.9.1"
   }
