--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "winston": "^3.2.1",
     "winston-mongodb": "^5.0.0"
   }
