--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.3.1",
     "winston": "^3.2.1",
     "winston-mongodb": "^5.0.0"
   }
