--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "backend application on node js",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll --verbose"
+    "test": "jest --watchAll --verbose --coverage"
   },
   "jest": {
     "testEnvironment": "node"
